--- a/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/swipe_container"
     android:layout_height="match_parent"
     android:background="#151D26"
     tools:context="com.twenty.four.crafts.DashboardFavouritesTabFragment">
@@ -14,6 +15,7 @@
        android:id="@+id/favs_grid"
        android:clipToPadding="false"
        android:padding="@dimen/inner_item_offset"/>
+
 
    </LinearLayout>
 
