--- a/app/src/main/res/layout/activity_radar_view.xml
+++ b/app/src/main/res/layout/activity_radar_view.xml
@@ -17,4 +17,12 @@
         android:layout_height="match_parent"
         android:id="@+id/radar_view"/>
 
+    <ImageView
+        android:visibility="gone"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/testImageViewradarView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"/>
+
 </RelativeLayout>
